# csc299-project

./: .gitignore  README.md  SUMMARY.md  main.py  video.txt
ai/: ai_agent.py
chat/: chat_interface.py
class_tasks/: conversation.txt
class_tasks/task_1/: readme.md  task_manager.py  tasks.json
class_tasks/task_2/: task_manager.py  tasks2.json
class_tasks/task_3/: main.py  pyproject.toml
class_tasks/task_3/task_3.egg-info/: PKG-INFO  SOURCES.txt
class_tasks/task_3/tasks3/: __init__.py  tasks2.json
class_tasks/task_3/tasks3.egg-info/: PKG-INFO  SOURCES.txt
class_tasks/task_3/tests/: test_inc.py  test_tasks3.py
class_tasks/task_4/: pyproject.toml
class_tasks/task_4/tasks4/: __init__.py
class_tasks/task_4/tasks4.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
notes/: note.py  note_manager.py
storage/: json_storage.py  notes.json  tasks.json
tasks/: task.py  task_manager.py
